--- a/arch/arm/dts/mm_am335x.dtsi
+++ b/arch/arm/dts/mm_am335x.dtsi
@@ -125,7 +125,7 @@
 		display-timings {
 			native-mode = <&timing0>;
 
-			timing0: G104XVN01_0 {
+			timing0: G104XVN01 {
 				clock-frequency = <50000000 65000000 81000000>;
 				hactive = <1024>;
 				vactive = <768>;
@@ -135,6 +135,21 @@
 				vback-porch = <38>;
 				vfront-porch = <3>;
 				vsync-len = <6>;
+				de-active = <1>;
+			};
+
+			timing1: PH320240T {
+				clock-frequency = <6400000>;
+				hactive = <320>;
+				vactive = <240>;
+				hback-porch = <38>;
+				hfront-porch = <20>;
+				hsync-len = <30>;
+				vback-porch = <15>;
+				vfront-porch = <5>;
+				vsync-len = <1 3 5>;
+				hsync-active = <0>;
+				vsync-active = <0>;
 				de-active = <1>;
 			};
 		};
@@ -248,44 +263,47 @@
 		#interrupt-cells = <2>;
 	};
 
-/*
+	isl97671a@2c {
+		compatible = "intersil,isl97671a";
+		reg = <0x2c>;
+	};
+
 	keypad: keypad@34 {
 		pinctrl-names = "default";
-		pinctrl-0 = <&mm_tca8418_pins>;
+		pinctrl-0 = <&mm_tca8418_pins_default>;
 		compatible = "ti,tca8418";
 		reg = <0x34>;
-		interrupt-parent = <&gpio2>;
-		interrupts = <26 IRQ_TYPE_EDGE_FALLING>;
+		interrupt-parent = <&intc>;
+		interrupts = <7>; /* nNMI */
 		keypad,num-rows = <4>;
 		keypad,num-columns = <6>;
 		linux,keymap = <
-			MATRIX_KEY(0,0,0x0100)
-			MATRIX_KEY(0,1,0x0101)
-			MATRIX_KEY(0,2,0x0102)
-			MATRIX_KEY(0,3,0x0103)
-			MATRIX_KEY(0,4,0x0104)
-			MATRIX_KEY(0,5,0x0105)
-			MATRIX_KEY(1,0,0x0110)
-			MATRIX_KEY(1,1,0x0111)
-			MATRIX_KEY(1,2,0x0112)
-			MATRIX_KEY(1,3,0x0113)
-			MATRIX_KEY(1,4,0x0114)
-			MATRIX_KEY(1,5,0x0115)
-			MATRIX_KEY(2,0,0x0120)
-			MATRIX_KEY(2,1,0x0121)
-			MATRIX_KEY(2,2,0x0122)
-			MATRIX_KEY(2,3,0x0123)
-			MATRIX_KEY(2,4,0x0124)
-			MATRIX_KEY(2,5,0x0125)
-			MATRIX_KEY(3,0,0x0130)
-			MATRIX_KEY(3,1,0x0131)
-			MATRIX_KEY(3,2,0x0132)
-			MATRIX_KEY(3,3,0x0133)
-			MATRIX_KEY(3,4,0x0134)
-			MATRIX_KEY(3,5,0x0135)
+			MATRIX_KEY(0,0,0x0200)
+			MATRIX_KEY(0,1,0x0201)
+			MATRIX_KEY(0,2,0x0202)
+			MATRIX_KEY(0,3,0x0203)
+			MATRIX_KEY(0,4,0x0204)
+			MATRIX_KEY(0,5,0x0205)
+			MATRIX_KEY(1,0,0x0210)
+			MATRIX_KEY(1,1,0x0211)
+			MATRIX_KEY(1,2,0x0212)
+			MATRIX_KEY(1,3,0x0213)
+			MATRIX_KEY(1,4,0x0214)
+			MATRIX_KEY(1,5,0x0215)
+			MATRIX_KEY(2,0,0x0220)
+			MATRIX_KEY(2,1,0x0221)
+			MATRIX_KEY(2,2,0x0222)
+			MATRIX_KEY(2,3,0x0223)
+			MATRIX_KEY(2,4,0x0224)
+			MATRIX_KEY(2,5,0x0225)
+			MATRIX_KEY(3,0,0x0230)
+			MATRIX_KEY(3,1,0x0231)
+			MATRIX_KEY(3,2,0x0232)
+			MATRIX_KEY(3,3,0x0233)
+			MATRIX_KEY(3,4,0x0234)
+			MATRIX_KEY(3,5,0x0235)
 		>;
-	}
-*/
+	};
 };
 
 &i2c1 {
@@ -381,19 +399,19 @@
 		#gpio-cells = <2>;
 	};
 
-/*
-	max14830@1 {
+	maxgpios: max14830@1 {
+		pinctrl-names = "default";
+		pinctrl-0 = <&mm_max14830_pins_default>;
 		compatible = "maxim,max14830";
 		reg = <1>;
 		spi-max-frequency = <16000000>;
 		clocks = <&clk24m>;
 		clock-names = "osc";
-		interrupt-parent = <&gpio3>;
-		interrupts = <7 IRQ_TYPE_EDGE_FALLING>;
+		interrupt-parent = <&gpio0>;
+		interrupts = <27 IRQ_TYPE_EDGE_FALLING>;
 		gpio-controller;
 		#gpio-cells = <2>;
 	};
-*/
 };
 
 &tscadc {
@@ -423,6 +441,12 @@
 };
 
 &am33xx_pinmux {
+	mm_max14830_pins_default: pinmux_mm_max14830_pins_default {
+		pinctrl-single,pins = <
+			AM33XX_PADCONF(AM335X_PIN_GPMC_AD11, PIN_INPUT_PULLUP, MUX_MODE7)	/*  gpio0[27] */
+		>;
+	};
+
 	mm_mmc1_pins_default: pinmux_mm_mmc1_pins_default {
 		pinctrl-single,pins = <
 			AM33XX_PADCONF(AM335X_PIN_MMC0_DAT0, PIN_INPUT_PULLUP, MUX_MODE0)	/* mmc0_dat0 */
@@ -460,9 +484,16 @@
 	mm_spi1_pins: pinmux_spi1_pins {
 		pinctrl-single,pins = <
 			AM33XX_PADCONF(AM335X_PIN_RMII1_REF_CLK, PIN_OUTPUT, MUX_MODE2)		/* spi1_cs0_mux1 */
-			AM33XX_PADCONF(AM335X_PIN_MII1_COL, PIN_OUTPUT, MUX_MODE2)		/* spi1_sclk_mux1 */
+			AM33XX_PADCONF(AM335X_PIN_XDMA_EVENT_INTR0, PIN_OUTPUT, MUX_MODE4)	/* spi1_cs1_mux2 */
+			AM33XX_PADCONF(AM335X_PIN_MII1_COL, PIN_INPUT_PULLUP, MUX_MODE2)	/* spi1_sclk_mux1 */
 			AM33XX_PADCONF(AM335X_PIN_MII1_RX_ER, PIN_OUTPUT, MUX_MODE2)		/* spi1_d1_mux1 */
-			AM33XX_PADCONF(AM335X_PIN_MII1_CRS, PIN_INPUT_PULLDOWN, MUX_MODE2)	/* spi1_d0_mux1 */
+			AM33XX_PADCONF(AM335X_PIN_MII1_CRS, PIN_INPUT, MUX_MODE2)		/* spi1_d0_mux1 */
+		>;
+	};
+
+	mm_tca8418_pins_default: pinmux_mm_tca8418_pins_default {
+		pinctrl-single,pins = <
+			AM33XX_PADCONF(AM335X_PIN_NNMI, PIN_INPUT_PULLUP, MUX_MODE0)		/*  nNMI */
 		>;
 	};
 
