--- a/arch/arm/dts/mm_imx51.dtsi
+++ b/arch/arm/dts/mm_imx51.dtsi
@@ -111,7 +111,7 @@
 		};
 	};
 
-	gpiokeys {
+	gpio-keys {
 		pinctrl-names = "default";
 		pinctrl-0 = <&pinctrl_gpiokeys>;
 		compatible = "gpio-keys";
