Use upstream DTS fixes for imx6

--- a/dts/src/arm/imx6qdl-phytec-pfla02.dtsi
+++ b/dts/src/arm/imx6qdl-phytec-pfla02.dtsi
@@ -206,8 +206,12 @@
 			};
 		};
 
-		rtc {
+		da9063_rtc: rtc {
 			compatible = "dlg,da9063-rtc";
+		};
+
+		da9063_wdog: watchdog {
+			compatible = "dlg,da9063-watchdog";
 		};
 	};
 };
