--- a/arch/arm/boards/myirtech-x335x/Makefile
+++ b/arch/arm/boards/myirtech-x335x/Makefile
@@ -1,3 +1,3 @@
-lwl-y += lowlevel.o
-obj-y += board.o
-bbenv-y += defaultenv-myirtech-x335x
+lwl-y					+= lowlevel.o
+obj-y					+= board.o
+bbenv-$(CONFIG_DEFAULT_ENVIRONMENT)	+= defaultenv-myirtech-x335x
