--- a/arch/arm/configs/mm_am335x_defconfig
+++ b/arch/arm/configs/mm_am335x_defconfig
@@ -6,6 +6,7 @@ CONFIG_MACH_MYIRTECH_X335X=y
 CONFIG_THUMB2_BAREBOX=y
 CONFIG_ARM_OPTIMZED_STRING_FUNCTIONS=y
 CONFIG_ARM_UNWIND=y
+CONFIG_IMAGE_COMPRESSION_XZKERN=y
 CONFIG_MMU=y
 CONFIG_MALLOC_SIZE=0x0
 CONFIG_EXPERIMENTAL=y
@@ -106,4 +107,3 @@ CONFIG_FS_EXT4=y
 CONFIG_FS_FAT=y
 CONFIG_FS_FAT_WRITE=y
 CONFIG_FS_FAT_LFN=y
-CONFIG_ZLIB=y
