--- a/arch/arm/dts/ep7212-clep7212.dts
+++ b/arch/arm/dts/ep7212-clep7212.dts
@@ -34,27 +34,31 @@
 		compatible = "cfi-flash";
 		reg = <0 0x00000000 0x02000000>;
 		bank-width = <2>;
-		#address-cells = <1>;
-		#size-cells = <1>;
 
-		partition@0 {
-			label = "boot";
-			reg = <0x00000 0x80000>;
-		};
+		partitions {
+			compatible = "fixed-partitions";
+			#address-cells = <1>;
+			#size-cells = <1>;
 
-		partition@80000 {
-			label = "env";
-			reg = <0x80000 0x40000>;
-		};
+			partition@0 {
+				label = "boot";
+				reg = <0x00000 0x80000>;
+			};
 
-		partition@c0000 {
-			label = "kernel";
-			reg = <0xc0000 0x340000>;
-		};
+			partition@80000 {
+				label = "env";
+				reg = <0x80000 0x40000>;
+			};
 
-		partition@400000 {
-			label = "root";
-			reg = <0x400000 0>;
+			partition@c0000 {
+				label = "kernel";
+				reg = <0xc0000 0x340000>;
+			};
+
+			partition@400000 {
+				label = "root";
+				reg = <0x400000 0>;
+			};
 		};
 	};
 };
