--- a/arch/arm/dts/am335x-myirtech-myd.dts
+++ b/arch/arm/dts/am335x-myirtech-myd.dts
@@ -26,17 +26,17 @@
 
 	partition@80000 {
 		label = "boot";
-		reg = <0x80000 0x80000>;
+		reg = <0x80000 0x100000>;
 	};
 
-	env_nand: partition@100000 {
+	env_nand: partition@180000 {
 		label = "env";
-		reg = <0x100000 0x40000>;
+		reg = <0x180000 0x40000>;
 	};
 
-	partition@140000 {
+	partition@1c0000 {
 		label = "system";
-		reg = <0x140000 0>;
+		reg = <0x1c0000 0>;
 	};
 };
 
