--- a/arch/arm/dts/am335x-myirtech-myd.dts
+++ b/arch/arm/dts/am335x-myirtech-myd.dts
@@ -9,14 +9,14 @@
 	chosen {
 		environment {
 			compatible = "barebox,environment";
-			device-path = &env_nand;
+			device-path = &nand0, "partname:env";
 		};
 	};
 
 };
 
 &nand_parts {
-	env_nand: partition@180000 {
+	partition@180000 {
 		label = "env";
 		reg = <0x180000 0x40000>;
 	};
