Strip defconfig for unused options

--- a/arch/arm/configs/mm_am335x_defconfig
+++ b/arch/arm/configs/mm_am335x_defconfig
@@ -85,14 +85,12 @@ CONFIG_USB_HUB_USB251XB=y
 CONFIG_USB_MUSB=y
 CONFIG_USB_MUSB_AM335X=y
 CONFIG_USB_MUSB_HOST=y
-CONFIG_VIDEO=y
 CONFIG_MCI=y
 CONFIG_MCI_OMAP_HSMMC=y
 CONFIG_SRAM=y
 CONFIG_EEPROM_AT24=y
 CONFIG_WATCHDOG=y
 CONFIG_WATCHDOG_OMAP=y
-CONFIG_PWM=y
 CONFIG_GPIO_74164=y
 CONFIG_GPIO_GENERIC_PLATFORM=y
 CONFIG_GPIO_PCA953X=y
@@ -100,9 +98,8 @@ CONFIG_PINCTRL_SINGLE=y
 CONFIG_BUS_OMAP_GPMC=y
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED=y
-CONFIG_RESET_CONTROLLER=y
-CONFIG_RTC_CLASS=y
 CONFIG_GENERIC_PHY=y
+# CONFIG_VIRTIO_MENU is not set
 CONFIG_FS_EXT4=y
 CONFIG_FS_FAT=y
 CONFIG_FS_FAT_WRITE=y
