--- a/arch/arm/configs/mm_am335x_mlo_defconfig
+++ b/arch/arm/configs/mm_am335x_mlo_defconfig
@@ -31,6 +31,7 @@ CONFIG_MCI=y
 CONFIG_MCI_OMAP_HSMMC=y
 CONFIG_PINCTRL_SINGLE=y
 CONFIG_BUS_OMAP_GPMC=y
+# CONFIG_VIRTIO_MENU is not set
 # CONFIG_FS_DEVFS is not set
 CONFIG_FS_FAT=y
 CONFIG_FS_FAT_LFN=y
