--- a/arch/arm/configs/mm_clps711x_defconfig
+++ b/arch/arm/configs/mm_clps711x_defconfig
@@ -69,6 +69,7 @@ CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED=y
 CONFIG_RTC_CLASS=y
 CONFIG_RTC_DRV_DS1307=y
+# CONFIG_VIRTIO_MENU is not set
 CONFIG_FS_EXT4=y
 CONFIG_FS_FAT=y
 CONFIG_FS_FAT_WRITE=y
