--- a/arch/arm/configs/mm_imx6_defconfig
+++ b/arch/arm/configs/mm_imx6_defconfig
@@ -109,6 +109,7 @@ CONFIG_REGULATOR_ANATOP=y
 CONFIG_RESET_CONTROLLER=y
 CONFIG_GENERIC_PHY=y
 CONFIG_USB_NOP_XCEIV=y
+# CONFIG_VIRTIO_MENU is not set
 CONFIG_FS_EXT4=y
 CONFIG_FS_FAT=y
 CONFIG_FS_FAT_WRITE=y
