--- a/arch/arm/configs/mm_imx51_defconfig
+++ b/arch/arm/configs/mm_imx51_defconfig
@@ -98,6 +98,7 @@ CONFIG_RTC_CLASS=y
 CONFIG_RTC_DRV_DS1307=y
 CONFIG_GENERIC_PHY=y
 CONFIG_USB_NOP_XCEIV=y
+# CONFIG_VIRTIO_MENU is not set
 CONFIG_FS_EXT4=y
 CONFIG_FS_FAT=y
 CONFIG_FS_FAT_WRITE=y
