--- a/arch/arm/dts/am335x-myirtech-myd.dts
+++ b/arch/arm/dts/am335x-myirtech-myd.dts
@@ -6,13 +6,19 @@
 #include <arm/am335x-myirtech-myd.dts>
 
 / {
+	aliases {
+		gpio0 = &gpio0;
+		gpio1 = &gpio1;
+		gpio2 = &gpio2;
+		gpio3 = &gpio3;
+	};
+
 	chosen {
 		environment {
 			compatible = "barebox,environment";
 			device-path = &nand0, "partname:env";
 		};
 	};
-
 };
 
 &nand_parts {
