Rework clps711x for old board scheme

--- a/arch/arm/mach-clps711x/Kconfig
+++ b/arch/arm/mach-clps711x/Kconfig
@@ -2,6 +2,16 @@
 
 if ARCH_CLPS711X
 
+choice
+    prompt "Cirrus Logic EP711x/EP721x/EP731x Board Type"
+
+config MACH_CLEP7212
+    bool "Cirrus Logic CLEP7212"
+    help
+      Boards based on the Cirrus Logic 7212/7312 CPU.
+
+endchoice
+
 menu "CLPS711X specific settings"
 
 config CLPS711X_RAISE_CPUFREQ
