--- a/images/Makefile.clps711x
+++ b/images/Makefile.clps711x
@@ -3,6 +3,6 @@
 # barebox image generation Makefile for CLPS711X images
 #
 
-pblb-$(CONFIG_ARCH_CLPS711X) += start_ep7212_clep7212
+pblb-$(CONFIG_MACH_CLEP7212) += start_ep7212_clep7212
 FILE_barebox-ep7212-clep7212.img = start_ep7212_clep7212.pblb
-image-$(CONFIG_ARCH_CLPS711X) += barebox-ep7212-clep7212.img
+image-$(CONFIG_MACH_CLEP7212) += barebox-ep7212-clep7212.img
